fixed membership portal button padding on mobile

--- a/styles/components/Navbar.scss
+++ b/styles/components/Navbar.scss
@@ -76,6 +76,11 @@
 
   #mobile-nav {
     display: none;
+
+    .button {
+      padding: 10px 20px 10px 20px;
+    }
+
   }
 
   .hamburger-icon {
